parse jre modules for docker from project's addopens